Reworked code in multiple places to eliminate the problem that caused discrepancies in performance when tested by multiple users. Specifically, the wait()/notify() coordination mechanism caused missed notifications. This mechanism has been replaced by direct invocations. Also revised the format of historical market depth storage. Added small GUI enhancements.