@@ -11,8 +11,7 @@ set cp=%cp%;%appHome%/lib/activation.jar
 set cp=%cp%;%appHome%/lib/jcommon-1.0.9.jar
 set cp=%cp%;%appHome%/lib/jfreechart-1.0.6.jar
 
-set javaOptions=-Xms512M -Xmx512M -XX:+CMSIncrementalMode -XX:+CMSIncrementalPacing -XX:+UseConcMarkSweepGC
-@rem set javaOptions=-Xms712M -Xmx712M -XX:+UseParallelGC
+set javaOptions=-Xms512M -Xmx512M
 set mainClass=com.jbooktrader.platform.startup.JBookTrader
 
 %javaHome%javaw.exe -cp "%cp%" %javaOptions% %mainClass% "%appHome%"
